syntax = "proto3";
package ibc_service_grpc;

import "google/protobuf/any.proto";

service IbcServiceGrpc {
    rpc SendIbcMessage (SendIbcMessageRequest) returns (Empty);
    rpc QueryApplicationStatus (Empty) returns (QueryApplicationStatusResponse);
    rpc QueryEmittedEvents (Empty) returns (QueryEmittedEventsResponse);
    rpc QueryChainHeader (Height) returns (QueryChainHeaderResponse);
}

message SendIbcMessageRequest {
    string type_url = 1;
    bytes value = 2;
};

message Empty {}

message QueryApplicationStatusResponse {
    Height height = 1;
    uint64 timestamp = 2;
}

message QueryEmittedEventsResponse {
    repeated google.protobuf.Any events = 1;
    Height height = 2;
}

message QueryChainHeaderResponse {
    bytes root = 1;
    int64 time = 2;
}

message Height {
    // Previously known as "epoch"
    uint64 revision_number = 1;

    // The height of a block
    uint64 revision_height = 2;
}